# usd-vrm-plugins

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY_NOTICES.md  openstrata.ci.yaml  openstrata.toml
docs/: CAPABILITY_MATRIX.md  DESIGN_POLICY.md  INSTALL.md  README.md  RELEASE_NOTES_TEMPLATE.md  ROADMAP.md  (+1 more)
libs/motionCore/: CMakeLists.txt  README.md  openstrata.library.yaml
libs/motionCore/cmake/: motionCoreConfig.cmake.in
libs/motionCore/include/motionCore/: Humanoid.h  api.h
libs/motionCore/src/: Humanoid.cpp
libs/motionCore/tests/: CMakeLists.txt  check_boundaries.py  test_humanoid.cpp
libs/vrmContainer/: CMakeLists.txt  README.md  openstrata.library.yaml
libs/vrmContainer/cmake/: vrmContainerConfig.cmake.in
libs/vrmContainer/include/vrmContainer/: ByteView.h  GlbContainer.h  api.h
libs/vrmContainer/src/: GlbContainer.cpp
libs/vrmContainer/tests/: CMakeLists.txt  check_boundaries.py  test_glb_container.cpp
plugins/usdVrm/: .gitignore  CMakeLists.txt  README.md  openstrata.plugin.yaml
plugins/usdVrm/cmake/: Dependencies.cmake
plugins/usdVrm/docs/: DIAGNOSTICS.md  SCHEMA_CONTRACT.md
plugins/usdVrm/plugin/resources/usdVrm/: buildInfo.json.in  generatedSchema.usda  plugInfo.json  plugInfo.json.in
plugins/usdVrm/schema/: schema.usda
plugins/usdVrm/src/: UsdVrmFileFormat.cpp  UsdVrmFileFormat.h
plugins/usdVrm/src/io/: CgltfVrmDocumentReader.cpp  CgltfVrmDocumentReader.h
plugins/usdVrm/src/model/: VrmCanonicalDocument.h  VrmDiagnostics.h
plugins/usdVrm/src/resolver/: VrmPackageResolver.cpp
plugins/usdVrm/src/schema/: tokens.cpp  tokens.h  vrmConstraintAPI.h  vrmExpressionAPI.cpp  vrmExpressionAPI.h  vrmHumanoidAPI.h  vrmLookAtAPI.h  vrmSpringBoneAPI.cpp
plugins/usdVrm/src/usd/: UsdVrmAuthorer.cpp
plugins/usdVrm/src/util/: TransformUtil.h
plugins/usdVrm/tests/: CMakeLists.txt  clean_install_smoke.py  plugInfo.in.json  test_usdvrm_corpus.py  test_usdvrm_plugin.py  test_usdvrm_validate.py
plugins/usdVrm/tests/corpus/: CORPUS.md  README.md
plugins/usdVrm/tests/corpus/conformance/: README.md
plugins/usdVrm/tests/corpus/licenses/: README.md
plugins/usdVrm/tests/corpus/seed-san/: LICENSE.md
plugins/usdVrm/tests/corpus/spec-samples/vrm1/constraint-twist/: LICENSE.md
plugins/usdVrm/tests/fixtures/: animation.vrm  badext.vrm  constraints.vrm  expressions.vrm  materials.vrm  minimal.vrm  minimal.vrm.golden.usda  multiskin_ibm.vrm  relative_texture.usda  springbone.vrm  unordered_skel.vrm  vrm0_expressions.vrm  vrm0_frontbake.vrm
plugins/usdVrm/tools/: generate_fixtures.py  generate_minimal_vrm.py  generate_schema.py  inspect_vrm.py  package_vrm.py  validate_vrm.py  vrm_diagnostics.py  vrm_fixture_lib.py  vrm_report.py
plugins/usdVrmFileFormat/: .gitignore  CMakeLists.txt  README.md  openstrata.plugin.yaml
plugins/usdVrmFileFormat/cmake/: Dependencies.cmake
plugins/usdVrmFileFormat/docs/: DIAGNOSTICS.md
plugins/usdVrmFileFormat/plugin/resources/usdVrmFileFormat/: buildInfo.json.in  plugInfo.json  plugInfo.json.in
plugins/usdVrmFileFormat/src/: UsdVrmFileFormat.cpp
plugins/usdVrmFileFormat/src/io/: VrmDocumentReader.h  cgltfImpl.cpp
plugins/usdVrmFileFormat/src/usd/: UsdVrmAuthorer.cpp  UsdVrmAuthorer.h
plugins/usdVrmFileFormat/src/util/: PathUtil.cpp  PathUtil.h  TransformUtil.cpp
plugins/usdVrmFileFormat/tests/: CMakeLists.txt  clean_install_smoke.py  plugInfo.in.json  test_transform_util.cpp  test_usdvrm_corpus.py  test_usdvrm_negative.py  test_usdvrm_plugin.py  test_usdvrm_validate.py
plugins/usdVrmFileFormat/tests/corpus/: .gitignore  README.md  manifest.json
plugins/usdVrmFileFormat/tests/corpus/vroid/: README.md
plugins/usdVrmFileFormat/tests/fixtures/: invalid.vrm  lookat.vrm  materials.vrm  minimal.vrm  minimal.vrm.golden.usda  names.vrm  shared_accessor.vrm  textures.vrm  vrm0_frontbake.vrm  vrm0_minimal.vrm
plugins/usdVrmFileFormat/tools/: generate_negative.py  inspect_vrm.py  package_vrm.py  validate_vrm.py  vrm_fixture_lib.py  vrm_report.py
plugins/usdVrmPackageResolver/: CMakeLists.txt  README.md  openstrata.plugin.yaml
plugins/usdVrmPackageResolver/cmake/: Dependencies.cmake
plugins/usdVrmPackageResolver/plugin/resources/usdVrmPackageResolver/: plugInfo.json  plugInfo.json.in
plugins/usdVrmPackageResolver/tests/: CMakeLists.txt  check_boundaries.py  plugInfo.in.json  test_resolver.py
plugins/usdVrmPackageResolver/tests/fixtures/: basic.usda  basic.usda.golden.usda  embedded_texture.usda
plugins/usdVrmaFileFormat/: CMakeLists.txt  README.md  openstrata.plugin.yaml
plugins/usdVrmaFileFormat/cmake/: Dependencies.cmake
plugins/usdVrmaFileFormat/plugin/resources/usdVrmaFileFormat/: plugInfo.json  plugInfo.json.in
plugins/usdVrmaFileFormat/src/: UsdVrmaFileFormat.cpp  UsdVrmaFileFormat.h
plugins/usdVrmaFileFormat/src/io/: CgltfVrmaDocumentReader.cpp  CgltfVrmaDocumentReader.h  VrmaDocumentReader.h  cgltfImpl.cpp
plugins/usdVrmaFileFormat/src/model/: VrmaCanonicalDocument.h
plugins/usdVrmaFileFormat/src/usd/: UsdVrmaAuthorer.cpp  UsdVrmaAuthorer.h
plugins/usdVrmaFileFormat/tests/: CMakeLists.txt  plugInfo.in.json  test_usdvrma_plugin.py
plugins/usdVrmaFileFormat/tests/fixtures/: canonical_walk.vrma  canonical_walk.vrma.golden.usda
plugins/usdVrmaFileFormat/tools/: generate_fixtures.py
plugins/vrmSchema/: CMakeLists.txt  README.md  openstrata.plugin.yaml
plugins/vrmSchema/cmake/: OpenStrataPlugin.cmake  vrmSchemaConfig.cmake.in
plugins/vrmSchema/docs/: SCHEMA_CONTRACT.md
plugins/vrmSchema/plugin/resources/vrmSchema/: plugInfo.json  plugInfo.json.in
plugins/vrmSchema/schema/: schema.usda
plugins/vrmSchema/src/vrmSchema/: api.h  tokens.cpp  tokens.h  vrmColliderAPI.cpp  vrmColliderAPI.h  vrmConstraintAPI.cpp  vrmHumanoidAPI.cpp  vrmLookAtAPI.cpp  vrmSpringBoneAPI.h
plugins/vrmSchema/tests/: CMakeLists.txt  test_vrmschema_plugin.py
plugins/vrmSchema/tests/consumer/: CMakeLists.txt  main.cpp
plugins/vrmSchema/tests/fixtures/: basic.usda  basic.usda.golden.usda
plugins/vrmSchema/tools/: generate_schema.py
(+115 files in other folders)
