# SPDX-License-Identifier: Apache-2.0
#
# usdVrmFileFormat — an OpenUSD SdfFileFormat plugin that imports .vrm avatars.
#
# Self-contained so `ost plugin build plugins/usdVrmFileFormat` can configure it directly,
# and also add_subdirectory()-able from the repo-root CMakeLists.txt for the
# plain-CMake (non-OpenStrata) workflow.
cmake_minimum_required(VERSION 3.22)

# Version comes from the repo-root VERSION file (single source of truth). When
# this bundle is built standalone from an export that does not carry the repo
# root, fall back to the bundle-manifest version so the configure still works.
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/../../VERSION")
    file(STRINGS "${CMAKE_CURRENT_SOURCE_DIR}/../../VERSION" _vrm_plugin_version LIMIT_COUNT 1)
    string(STRIP "${_vrm_plugin_version}" _vrm_plugin_version)
else()
    set(_vrm_plugin_version "0.2.0")  # mirrors openstrata.plugin.yaml
endif()

project(UsdVrmPlugin
    VERSION ${_vrm_plugin_version}
    DESCRIPTION "OpenUSD vrm file-format plugin"
    LANGUAGES CXX)

if(NOT CMAKE_CXX_STANDARD)
    set(CMAKE_CXX_STANDARD 17)
endif()
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Default Release for single-config generators (Release-only USD installs).
get_property(_isMultiConfig GLOBAL PROPERTY GENERATOR_IS_MULTI_CONFIG)
if(NOT _isMultiConfig AND NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
endif()

# The repo root defines this option for the plain-CMake multi-bundle build. When
# the bundle is configured directly by `ost plugin build`, define the same option
# here so CTest targets are generated by default.
if(NOT DEFINED USDVRM_BUILD_TESTS)
    option(USDVRM_BUILD_TESTS "Build usdVrm plugin tests" ${PROJECT_IS_TOP_LEVEL})
endif()

# Resolved from the runtime OpenStrata activates, or from CMAKE_PREFIX_PATH in
# the plain-CMake flow. Idempotent when the root project already found it.
if(NOT pxr_FOUND)
    find_package(pxr REQUIRED CONFIG)
endif()

# cgltf, fetched at configure time (see cmake/Dependencies.cmake). Defines the
# cgltf::cgltf INTERFACE target.
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/Dependencies.cmake")

# vrmSchema: ost >= 0.15.0 builds and installs the requires.bundles closure
# before configuring this consumer. A plain workspace build already has the
# in-tree alias; any other standalone caller supplies an installed package.
if(NOT TARGET vrmSchema::vrmSchema)
    find_package(vrmSchema CONFIG REQUIRED)
endif()

# vrmContainer is deliberately a plain library, not a plugin bundle. ost 0.16.0
# executes the manifest's requires.libraries closure: it builds/installs the
# library (located through libs/vrmContainer/openstrata.library.yaml) into the
# workspace prefix before configuring this consumer. A plain workspace build
# already has the in-tree alias; any other standalone caller supplies an
# installed package via CMAKE_PREFIX_PATH (WORKSPACE.md §4: consumers never
# reach into a sibling with add_subdirectory()).
if(NOT TARGET vrmContainer::vrmContainer)
    find_package(vrmContainer CONFIG REQUIRED)
endif()

set(PLUGIN_NAME UsdVrmFileFormat)

add_library(${PLUGIN_NAME} SHARED
    src/UsdVrmFileFormat.cpp
    src/io/cgltfImpl.cpp
    src/io/CgltfVrmDocumentReader.cpp
    src/usd/UsdVrmAuthorer.cpp
    src/util/PathUtil.cpp
    src/util/TransformUtil.cpp)

target_compile_features(${PLUGIN_NAME} PRIVATE cxx_std_17)
target_include_directories(${PLUGIN_NAME} PRIVATE
    "${CMAKE_CURRENT_SOURCE_DIR}/src"
    ${PXR_INCLUDE_DIRS})
# vrmSchema's USDVRM_API macro resolves to ARCH_IMPORT here (USDVRM_EXPORTS is
# only defined when building libvrmSchema itself), so the authorer imports the
# typed API across the DLL boundary.
target_link_libraries(${PLUGIN_NAME} PRIVATE
    cgltf::cgltf
    vrmContainer::vrmContainer
    vrmSchema::vrmSchema)

if(MSVC)
    target_compile_definitions(${PLUGIN_NAME} PRIVATE NOMINMAX _USE_MATH_DEFINES)
    target_compile_options(${PLUGIN_NAME} PRIVATE /bigobj /utf-8)
endif()

# Link the USD monolith if present, else the discrete libraries this plugin uses.
if(TARGET usd_ms)
    target_link_libraries(${PLUGIN_NAME} PRIVATE usd_ms)
else()
    set(_pxr_targets)
    foreach(_t IN ITEMS arch tf gf vt js ar plug sdf usd usdGeom usdSkel usdShade)
        if(TARGET ${_t})
            list(APPEND _pxr_targets ${_t})
        elseif(TARGET pxr::${_t})
            list(APPEND _pxr_targets pxr::${_t})
        endif()
    endforeach()
    if(_pxr_targets)
        target_link_libraries(${PLUGIN_NAME} PRIVATE ${_pxr_targets})
    elseif(PXR_LIBRARIES)
        target_link_libraries(${PLUGIN_NAME} PRIVATE ${PXR_LIBRARIES})
    else()
        message(FATAL_ERROR "Could not locate OpenUSD CMake targets or PXR_LIBRARIES.")
    endif()
endif()

# Stage the shared library into the bundle's lib/ so both `ost plugin test` and
# plugInfo.json (LibraryPath = ../../../lib/<lib>) resolve it.
# Use CURRENT_SOURCE_DIR so the location is correct whether this is the top
# project (ost) or a subdirectory of the repo-root project (plain CMake).
set(OPENSTRATA_PLUGIN_LIBRARY_PREFIX "lib")
set_target_properties(${PLUGIN_NAME} PROPERTIES
    PREFIX "${OPENSTRATA_PLUGIN_LIBRARY_PREFIX}"
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib")
foreach(_cfg DEBUG RELEASE RELWITHDEBINFO MINSIZEREL)
    set_target_properties(${PLUGIN_NAME} PROPERTIES
        ARCHIVE_OUTPUT_DIRECTORY_${_cfg} "${CMAKE_CURRENT_SOURCE_DIR}/lib"
        LIBRARY_OUTPUT_DIRECTORY_${_cfg} "${CMAKE_CURRENT_SOURCE_DIR}/lib"
        RUNTIME_OUTPUT_DIRECTORY_${_cfg} "${CMAKE_CURRENT_SOURCE_DIR}/lib")
endforeach()

# Generate the USD registration file for the target platform. The source bundle
# keeps a concrete plugInfo.json for static inspection, then CMake refreshes it
# during `ost plugin build` so macOS gets .dylib, Windows gets .dll, and Linux
# gets .so.
configure_file(
    "${CMAKE_CURRENT_SOURCE_DIR}/plugin/resources/usdVrmFileFormat/plugInfo.json.in"
    "${CMAKE_CURRENT_SOURCE_DIR}/plugin/resources/usdVrmFileFormat/plugInfo.json"
    @ONLY)

# Release-artifact build metadata (roadmap P1): stamp what produced this binary
# into the bundle resources, so a shipped package can answer "which commit /
# toolchain / OpenUSD built you" without the build tree. Retrieved by
# tools/vrm_report.py ("build" section) or read directly from the package.
# Deliberately carries no timestamp: for an unchanged build the stamp must not
# break `ost plugin package` digest reproducibility.
set(_vrm_git_commit "unknown")
find_package(Git QUIET)
if(GIT_FOUND)
    execute_process(
        COMMAND "${GIT_EXECUTABLE}" -C "${CMAKE_CURRENT_SOURCE_DIR}" rev-parse HEAD
        OUTPUT_VARIABLE _vrm_git_head
        OUTPUT_STRIP_TRAILING_WHITESPACE
        ERROR_QUIET
        RESULT_VARIABLE _vrm_git_rc)
    if(_vrm_git_rc EQUAL 0)
        set(_vrm_git_commit "${_vrm_git_head}")
    endif()
endif()

# Single source: the contract version the authorer stamps on every stage.
set(_vrm_schema_contract_version 0)
file(STRINGS "${CMAKE_CURRENT_SOURCE_DIR}/src/usd/UsdVrmAuthorer.cpp"
     _vrm_contract_line REGEX "_kSchemaContractVersion = [0-9]+")
if(_vrm_contract_line)
    string(REGEX MATCH "[0-9]+" _vrm_schema_contract_version "${_vrm_contract_line}")
endif()

if(_isMultiConfig)
    set(_vrm_build_type "multi-config")
else()
    set(_vrm_build_type "${CMAKE_BUILD_TYPE}")
endif()

# pxrConfig.cmake publishes PXR_MAJOR/MINOR/PATCH_VERSION plus the numeric
# PXR_VERSION (e.g. 2605 for OpenUSD 26.05).
if(DEFINED PXR_MAJOR_VERSION)
    set(_vrm_openusd_version
        "${PXR_MAJOR_VERSION}.${PXR_MINOR_VERSION}.${PXR_PATCH_VERSION}")
else()
    set(_vrm_openusd_version "unknown")
endif()
if(DEFINED PXR_VERSION)
    set(_vrm_pxr_version "${PXR_VERSION}")
else()
    set(_vrm_pxr_version "unknown")
endif()

configure_file(
    "${CMAKE_CURRENT_SOURCE_DIR}/plugin/resources/usdVrmFileFormat/buildInfo.json.in"
    "${CMAKE_CURRENT_SOURCE_DIR}/plugin/resources/usdVrmFileFormat/buildInfo.json"
    @ONLY)

if(USDVRM_BUILD_TESTS AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/tests/CMakeLists.txt")
    enable_testing()
    add_subdirectory(tests)
endif()
